--- a/Osa 2/puhelinluettelo/package.json
+++ b/Osa 2/puhelinluettelo/package.json
@@ -18,6 +18,7 @@
     "eject": "react-scripts eject",
     "server": "json-server -p3001 --watch db.json"
   },
+  "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -34,6 +35,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "json-server": "^0.16.1"
   }
 }
